<?xml version="1.0"?>
<package>
  <name>csapex_core_test</name>
  <version>1.0.0</version>
  <description>The csapex package provides main tests of cs::APEX</description>

  <maintainer email="mail@betwo.eu">Sebastian Buck</maintainer>

  <license>BSD</license>

  <author email="mail@betwo.eu">Sebastian Buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex_testing</build_depend>

  <run_depend>csapex_testing</run_depend>
</package>
