<?xml version="1.0"?>
<package>
  <name>csapex_qt</name>
  <version>0.9.7</version>
  <description>The csapex package provides the qt aspects of CS::APEX</description>

  <maintainer email="mail@betwo.eu">Sebastian Buck</maintainer>

  <license>BSD</license>

  <author email="mail@betwo.eu">Sebastian Buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>csapex_core</build_depend>
  <build_depend>csapex_remote</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>
  <build_depend>opengl</build_depend>

  <run_depend>csapex_core</run_depend>
  <run_depend>csapex_remote</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>libqt5-opengl</run_depend>
  <run_depend>opengl</run_depend>
  <run_depend>opengl</run_depend>
</package>
