<?xml version="1.0"?>
<package>
  <name>csapex_rqt</name>
  <version>0.0.1</version>
  <description>The csapex_rqt package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>csapex</build_depend>
  <build_depend>class_loader</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>csapex</run_depend>
  <run_depend>class_loader</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/rqt_plugin.xml"/>
  </export>
</package>
